--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,15 @@
-<h1> hello world</h1>
+<h1> Please login or sign up below!</h1>
+<div id="container">       
+<form>
+	<label for="username">Username:</label>
+		<input type="text" id="username" name="username">
+	<label for="password">Password:</label>
+		<input type="password" id="password" name="password">
+<div id="lower">
+	<input type="checkbox"><label for="checkbox">Keep me logged in</label>
+	<input type="submit" value="Sign up!">
+	<input type="submit" value="Login">
+
+</div><!--/ lower-->
+</form>
+</div>
