--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <h1> Please login or sign up below!</h1>
-<div id="container">       
+<!-- <div id="container">       
 <form>
 	<label for="username">Username:</label>
 		<input type="text" id="username" name="username">
@@ -7,9 +7,10 @@
 		<input type="password" id="password" name="password">
 <div id="lower">
 	<input type="checkbox"><label for="checkbox">Keep me logged in</label>
-	<input type="submit" value="Sign up!">
-	<input type="submit" value="Login">
+	<input type="submit" id="login" value="Login">
 
 </div><!--/ lower-->
-</form>
+<!--</form> -->
+<a href="/auth/signup"><button id="signup" value="Sign up!">Sign up!</button></a>
+<a href="/auth/login"><button id="login" value="Login">Login</button></a>
 </div>
