--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,10 +40,10 @@
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text"></h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!"></a></li>
-          <li><a class="grey-text text-lighten-3" href="#!"></a></li>
-          <li><a class="grey-text text-lighten-3" href="#!"></a></li>
-          <li><a class="grey-text text-lighten-3" href="#!"></a></li>
+          <li><a class="grey-text text-lighten-3" href="/chatroom">Chatroom</a></li>
+          <li><a class="grey-text text-lighten-3" href="/players">View Players</a></li>
+          <li><a class="grey-text text-lighten-3" href="/profile">Go to your Profile</a></li>
+          <li><a class="grey-text text-lighten-3" href="/index">Go home</a></li>
         </ul>
       </div>
     </div>
