--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,31 @@
 form { 
-	background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; 
+	background: #000; 
+	padding: 3px;  
+	bottom: 0; 
+	width: 100%; 
 }
 #chatinput { 
-	border: 0; padding: 10px; width: 90%; margin-right: .5%;
+	border: 0; 
+	padding: 5px; 
+	width: 90%; 
+	margin-right: .5%;
 }
 #m { 
-	width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; 
+	width: 90%; 
+	/*background: rgb(130, 224, 255); */
+	border: none; 
+	padding: 10px; 
 }
 #messages { 
-	list-style-type: none; margin: 0; padding: 0; 
+	list-style-type: none; 
+	margin: 0; 
+	padding: 0; 
+}
+#chatbutton { 
+	width: 9%; 
+	background: rgb(130, 224, 255); 
+	border: none; 
+	padding: 8.5px; 
 }
 #messages li { 
 	padding: 5px 10px; 
