--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -1,5 +1,5 @@
 <h1>Where you go to Chat</h1>
 <ul id="messages"></ul>
     <form action="" id="chatinput">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button id="chatbutton">Send</button>
     </form>
