--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,11 +5,12 @@
 	   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	   <!-- Compiled and minified CSS -->
   	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+     <link rel="stylesheet" href="style.css">
 
   	 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   	 <!-- Compiled and minified JavaScript -->
   	 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
-  	 <script type="text/javascript" src="/favorite.js"></script>
+  	 <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <% if(typeof alerts !== 'undefined'){ %>
