After brians Socket io help

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
   	 <!-- Compiled and minified JavaScript -->
   	 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
   	 <script type="text/javascript" src="script.js"></script>
+     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 <% if(typeof alerts !== 'undefined'){ %>
