--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -1,4 +1,11 @@
 <h1>Where you go to Chat</h1>
+
+<script type="text/javascript">
+	var socket = io();
+	socket.on('connect', function() {
+ 		console.log('Socket.io connection successful');
+	});
+</script>
 <ul id="messages"></ul>
     <form action="" id="chatinput">
       <input id="m" autocomplete="off" /><button id="chatbutton">Send</button>
