--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <h3>Sign up!</h3>
 <form method="POST" action="/auth/signup">
 	<input type="text" name="username" class="form-control" placeholder="Enter your name" />
@@ -6,3 +7,4 @@
 	<input type="password" name="password2" class="form-control" placeholder="Re-enter your password" />
 	<input type="submit" value="Sign up!" class="btn btn-primary" />
 </form>
+</div>
