--- a/views/profile/createprofile.ejs
+++ b/views/profile/createprofile.ejs
@@ -1,6 +1,6 @@
 <div class="container">
 <h3>Enter in your player info</h3>
-<form method="POST" action="/profile/createprofile">
+<form enctype="multipart/form-data" method="POST" action="/profile/createprofile">
 	<input type="text" name="firstname" class="form-control" placeholder="Enter your first name" />
 	<input type="text" name="lastname" class="form-control" placeholder="Enter your last name" />
 	<input type="text" name="nickname" class="form-control" placeholder="Enter your nickname" />
