--- a/views/profile/createprofile.ejs
+++ b/views/profile/createprofile.ejs
@@ -7,6 +7,8 @@
 	<input type="text" name="style" class="form-control" placeholder="Enter your style" />
 	<input type="text" name="handgrip" class="form-control" placeholder="Enter your handgrip" />
 	<input type="text" name="biography" class="form-control" placeholder="Enter your biography" />
+	<label>Upload your photo</label>
+	<input type="file" name="myFile" placeholder="Insert your picture!" />
 	<input type="submit" value="Create Profile!" class="btn btn-primary" />
 </form>
 </div>
