somewhat polished a little

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Search for Movies!</title>
+	<title>WDI Ping Pong Masters!</title>
 	   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	   <!-- Compiled and minified CSS -->
   	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
@@ -58,7 +58,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-    Keaton Laney© 2014 Copyright Text
+    Keaton Laney© 2015 Copyright Text
     <a class="grey-text text-lighten-4 right" href="#!"></a>
     </div>
   </div>
