--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,6 +1,6 @@
 <div class="container">
-<h1><%= playerinfo.firstname %>s profile!</h1>
 <%if (playerinfo){ %>
+<h1><%= playerinfo.firstname %>s profile!</h1>
 	<div class="cardcontainer">
 		<div class="card">
 		    <div class="card-image waves-effect waves-block waves-light">
@@ -19,7 +19,8 @@
 		</div>
 	</div>
 <%} else { %>
-<a href="/profile/createprofile">Make your profile</a>
+<h1>Create a new Profile!</h1>
+<a href="/profile/createprofile"><button>Make your profile</button></a>
 <% }%>
 </div>
 
