--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>WDI Ping Pong Masters!</title>
+    <link href='https://fonts.googleapis.com/css?family=Carrois+Gothic' rel='stylesheet' type='text/css'>
 	   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	   <!-- Compiled and minified CSS -->
   	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
